--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 # Compiled class file
 *.class
 
@@ -18,6 +19,33 @@
 *.zip
 *.tar.gz
 *.rar
+!gradle-wrapper.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*~
+#*
+*#
+.#*
+.classpath
+.project
+.settings
+.springBeans
+.gradle
+build
+bin
+target/*
+git.properties
+.idea
+*.iml
+.factorypath
+
+.vscode
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+### Temp Test files ###
+**/test.xml
+**/test-workdir/**
