Implemented tests for oauth2 client multi tenant environment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,14 @@ management:
   info:
     git:
       mode: full
+
+
+
+---
+spring:
+  profiles:
+    test
+
+logging:
+  level:
+    root: DEBUG
